--- a/taller beltran 2/cart/actualizar_art.html
+++ b/taller beltran 2/cart/actualizar_art.html
@@ -4,7 +4,7 @@
 
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximun-scale=1, minium-scale=1">
-	<title>Actualización de artículo</title>
+	<title>Actualización de información</title>
 	<link rel="stylesheet" type="text/css" href="CSS/input.css">
 	<link rel="stylesheet" type="text/css" href="CSS/boton.css">
 	 <link rel="stylesheet" type="text/css" href="CSS/busque.css">
@@ -19,24 +19,24 @@
 </script>
 
 <body>
-	<img onclick="goBack()" src="../imgs/atras.png"  width=80 height=80>
+	
 	<style background: rgba(255,123,19,0.8); ></style>
 	<form action="articulo/busqueda.php" method="POST" class="fomulario_reg" onsubmit="return validarForm();" id="form">
 		<table border="6" style=" margin: 0 auto;">
 			<tr >
 	            
-	            <center><td colspan="7"><center><img src="imgs/new_log.png" width="40%" height="auto"></center></td></center>
+	            <center><td colspan="7"><center></center></td></center>
 	        </tr>
 
 	        <tr>
 	            <td colspan="10"><center><b><h2>Actualiza información</h2></b></center></td>
 	        </tr>
             <tr>
-	        	<td colspan="5"><center><a href="gestion.php">Volver a gestión</a></center></td>
+	        	<td colspan="5"><center><a href="gestion.php">Volver a inicio</a></center></td>
 	        	<td colspan="5"><center><input type="submit" name="boton" value="Buscar" class="boton"></center></td>
 	        </tr>
 	        <tr>
-	        	<td colspan="5"><center>ID del artículo</center></td>
+	        	<td colspan="5"><center>ID del producto</center></td>
 	        	<td colspan="5"><center><input type="text" name="codigo" id="cod"></center></td>
 	        </tr>
 	        
